fix: correct Vercel configuration by replacing 'functions' with 'builds' for proper deployment

--- a/vercel.json
+++ b/vercel.json
@@ -1,10 +1,10 @@
 {
-  "functions": {
-    "build": {
+  "builds": [
+    {
       "src": "package.json",
       "use": "@vercel/static-build"
     }
-  },
+  ],
   "routes": [
     {
       "src": "/static/(.*)",
